--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.10.4",
-    "nodemon": "^2.0.4"
+    "eslint": "^7.5.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "nodemon": "^2.0.4",
+    "prettier": "^2.0.5"
   }
 }
