--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Lee JaeYoon",
   "license": "ISC",
   "dependencies": {
+    "@babel/cli": "^7.10.5",
     "@babel/core": "^7.10.5",
     "@babel/node": "^7.10.5",
     "@babel/polyfill": "^7.10.4",
@@ -40,9 +41,14 @@
     "webpack-cli": "^3.3.12"
   },
   "scripts": {
-    "dev:server": "nodemon --exec babel-node init.js --delay 2 --ignore 'scss' --ignore 'static'",
-    "dev:assets": "cross-env WEBPACK_ENV=development webpack -w",
-    "build:assets": "cross-env WEBPACK_ENV=production webpack"
+    "dev:server": "nodemon --exec babel-node src/init.js --delay 2 --ignore 'scss' --ignore 'static'",
+    "dev:assets": "cd src && cross-env WEBPACK_ENV=development webpack -w",
+    "build:assets": "cd src && cross-env WEBPACK_ENV=production webpack",
+    "build:server": "babel src --out-dir build --ignore 'src/assets','src/static','src/webpack.config.js",
+    "copyAll": "copy -R src/static build && copy -R src/views build",
+    "build": "npm run build:server && npm run build:assets && npm run copyAll ",
+    "prebuild": "rd /s \"build\"",
+    "start": "node build/init.js"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.10.4",
